hphp/test/slow/object_cast_forbidden.php.expectf
Fatal error: Encountered unexpected token `$value`. in %s/object_cast_forbidden.php on line 6
